--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-      "gulp": "~3.2.4",
-      "gulp-jshint": "~1.3.4",
-      "gulp-livereload": "~0.1.1",
-      "connect-livereload": "~0.3.2",
-      "tiny-lr": "0.0.5",
-      "connect": "~2.12.0"
+    "connect": "~2.12.0",
+    "connect-livereload": "~0.3.2",
+    "gulp": "~3.2.4",
+    "gulp-compass": "^2.1.0",
+    "gulp-jshint": "~1.3.4",
+    "gulp-livereload": "~0.1.1",
+    "tiny-lr": "0.0.5"
   }
 }
